--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "make-components",
+  "name": "thetaterspecial-make-components",
   "version": "0.0.1",
   "description": "A React component library.",
   "main": "index.js",
